<resources>
    <string name="app_name" translatable="false">DES-CONTA</string>
    <string name="description_et_login">EditText para do login de usuário</string>
    <string name="tv_login_login">Login</string>
    <string name="et_login_login_hint">Digite seu Email</string>
    <string name="tv_login_senha">Senha</string>
    <string name="et_login_senha_hint">Digite sua senha</string>
    <string name="bt_login_acessar">Acessar</string>
    <string name="tv_login_cadastrar">Ainda não possui uma conta?</string>
    <string name="bt_login_cadastrar">Cadastre-se</string>
    <string name="tv_cadastrar_nome">Nome*</string>
    <string name="et_cadastrar_nome">Primeiro nome*</string>
    <string name="tv_cadastrar_sobrenome">Sobrenome*</string>
    <string name="et_cadastrar_sobrenome_hint">Sobrenome</string>
    <string name="tv_cadastrar_cpf">CPF*</string>
    <string name="tv_cadastrar_dataNasc">Data de nascimento*</string>
    <string name="bt_login_proximo">Próximo</string>
    <string name="tv_cadastrar2_estado">Estado*</string>
    <string name="tv_cadastrar2_cidade">Cidade*</string>
    <string name="tv_cadastro2_cep">CEP*</string>
    <string name="et_cadastro2_cep_hint">Insira seu CEP</string>
    <string name="tv_cadastrar2_bairro">Bairro*</string>
    <string name="et_cadastrar2_bairro">Insira seu bairro</string>
    <string name="tv_cadastrar2_logradouro">Logradouro*</string>
    <string name="et_cadastrar2_rua">Insira sua rua ou avinada</string>
    <string name="tv_cadastrar2_complemento">Complementos</string>
    <string name="et_cadastrar2_complemento">Mais informações</string>
    <string name="tv_cadastro3_email">Email*</string>
    <string name="et_cadastro3_email_hint">Insira seu Email</string>
    <string name="et_cadastro3_senha_hint">Insira sua senha</string>
    <string name="tv_login_ConfSenha">Confirmar senha*</string>
    <string name="et_cadastro3_ConfSenha_hint">Insira novamente sua senha</string>
    <string name="tv_login_termos">Concordo com os termos de contrato</string>
    <string name="bt_login_finalizar">Cadastrar login</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="tab_text_1">Compras</string>
    <string name="tab_text_2">Meus Descontos</string>
    <string name="tab_text_3">Pesquisar Empresas</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dn_perfil">Perfil</string>
    <string name="dn_duvidas">Duvidas</string>
    <string name="dn_comentarios">Comentários</string>
    <string name="dn_sair">Sair</string>
    <string name="tv_card_valor">Valor: R$ </string>
    <string name="tv_card_data_compra">Data da compra:</string>
    <string name="obrigatorio">é  obrigatório</string>
    <string name="invalido">é inválido</string>
    <string name="emailObrigatorio">O campo email é obrigatório</string>
    <string name="senhaObrigatorio">O campo senha é obrigatório</string>
    <string name="confirmarSenhaObrigatorio">O campo confirmar senha é obrigatório</string>
    <string name="termosObrigatorio">Por favor aceite os nossos termos e condições</string>
    <string name="senhasDiferentes">As senhas digitadas são diferentes</string>
    <string name="loginCriadoComSucesso">Login criado com sucesso</string>
    <string name="senhaComMenosDeSeisDigitos">A senha deve ter pelo menos 6 dígitos</string>
    <string name="emailInvalido">Email inválido</string>
    <string name="emailJaCadastrado">Este email já está cadastrado</string>
    <string name="semConexaoComFirebase">Sem conexão com o Firebase</string>
    <string name="semConexaoComInternet">Sem conexão com a internet</string>
    <string name="redeInvalida">Rede de internet inválida</string>
    <string name="loginEfetuadoComSucesso">Login efetuado com sucesso</string>
    <string name="senhaInvalida">Senha inválida</string>
    <string name="emailNaoCadastrado">Email não cadastrado</string>
    <string name="esqueceu_a_senha">Esqueceu sua senha?</string>
    <string name="digite_o_seu_email_para_redefinir_a_senha">Digite o seu email para redefinir a senha</string>
    <string name="voc_receber_no_email_indicado_um_link_para_redefini_o_da_senha">Você receberá no email indicado um link para redefinição da senha</string>
    <string name="enviar">Enviar</string>
    <string name="mensagem_enviada">Menssagem enviada para o email:</string>
    <string name="fa_a_login_usando_uma_conta">Faça login usando uma conta</string>
    <string name="facebook_app_id">516889652474366</string>
    <string name="fb_login_protocol_scheme">fb516889652474366</string>
    <string name="erroAoLogarComGoogle">Erro ao logar com o Google</string>
    <string name="erroAoAdicionarContaGoogleAoFirebase">Erro ao adicionar conta do Google ao Firebase</string>
    <string name="erroAoLogarComFacebook">Erro ao logar com o Facebook</string>
    <string name="erroAoAdicionarContaFacebookAoFirebase">Erro ao adicionar conta do Facebook ao Firebase</string>
    <string name="nomeObrigatorio">O campo nome é obrigatório</string>
    <string name="sobrenomeObrigatorio">O campo sobrenome é obrigatório</string>
    <string name="cpfObrigatorio">O campo CPF é obrigatório</string>
    <string name="cpfInvalido">CPF inválido</string>
    <string name="dataInvalido">Data Inválida</string>
    <string name="dataNascObrigatorio">O campo Data de nascimento é obrigatório</string>
    <string name="menorIdade">É necessário que tenha 18 anos</string>
    <string name="digiteCPF">Digite seu CPF para verificarmos se há registros de compras em nossa base de dados</string>
    <string name="digite_o_cpf_aqui">Digite o CPF aqui</string>
    <string name="bt_verificar">Verificar</string>
    <string name="CPF_nao_identificado">Não há registro deste CPF em nossa base de dados</string>
    <string name="tv_cadastrar2_numero">Número*</string>
    <string name="et_cadastrar2_numero">Insira o número da sua casa</string>
    <string name="et_cadastrar_cidade">Insira sua cidade</string>
    <string name="cep_obrigatorio">O campo CEP é obrigatório</string>
    <string name="estadoObrigatorio">O campo estado é obrigatório</string>
    <string name="cidadeObrigatorio">O campo cidade é obrigatório</string>
    <string name="bairroObrigatorio">O campo bairro é obrigatório</string>
    <string name="ruaObrigatorio">O campo rua é obrigatório</string>
    <string name="numeroObrigatorio">O campo número é obrigatório</string>
    <string name="tv_cadastrar_telefone1">Telefone 1*</string>
    <string name="tv_cadastrar_telefone2">Telefone 2</string>
    <string name="et_cadastrar_telefone_hint">Telefone de contato</string>
    <string name="et_cadastrar_opcional_hint">Opicional</string>
    <string name="tv_cadastrar_rg">RG*</string>
    <string name="et_registroGeral">Registro geral*</string>
    <string name="rgObrigatorio">O campo RG é obrigatório</string>
    <string name="telefoneObrigatorio">O campo telefone 1 é obrigatório</string>
    <string name="cepInvalido">CEP inválido</string>
    <string name="carregando">Carregando...</string>
    <string name="cadastroEfetuadoComSucesso">Cadastro realizado com sucesso</string>
    <string name="esteCpfJaeUtilizado">Erro ao tentar criar novo usuário com o CPF fornecido</string>
    <string name="detalhes_compra">Detalhes de compra</string>
    <string name="compras">Compras</string>
    <string name="tv_recycle_nome_fantasia">Nome Fantasia: </string>
    <string name="tv_recycle_razao_social">Razão Social:</string>
    <string name="tv_recycle_cnpj">CNPJ:</string>
    <string name="tv_recycle_inscricao_estadual">Inscrição Estadual:</string>
    <string name="tv_recycle_tel">Telefone:</string>
    <string name="parcelas">Parcelas</string>
    <string name="compra">Compra</string>
    <string name="tv_recycle_parcela_atual">Parcela Nº:</string>
    <string name="data_vencimento_boleto">Data de vencimento:</string>
    <string name="tv_recycle_valor_parcela">Valor da parcela: R$</string>
    <string name="gerar_boleto">Gerar boleto</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="pagarBoleto">Pagar Boleto</string>
    <string name="boleto_pago">Boleto Pago</string>
    <string name="numero_do_boleto">Número do boleto:</string>
    <string name="valor_do_boleto">Valor do Boleto</string>
    <string name="pagamento_realizado_comSucesso">Pagamento realizado com sucesso</string>
    <string name="finalizar">Finalizar e Retornar</string>
    <string name="boleto_pagop">Compra Paga</string>
    <string name="mostrar_mais">Informações</string>
    <string name="sobreEmpresa">Sobre a Empresa</string>
    <string name="selecione_cidade">Selecione uma cidade</string>
    <string name="nome_perfil">Nome:</string>
    <string name="novo_nome">Digite o nome de sua preferência:</string>
    <string name="novo_sobrenome">Digite seu Sobrenome:</string>
    <string name="novo_telefone1">Digite seu novo telefone:</string>
    <string name="atualizar">Atualizar</string>
    <string name="nome_atualizado_sucesso">Nome atualizado com sucesso</string>
    <string name="sobrenome_atualizado_sucesso">Sobrenome atualizado com sucesso</string>
    <string name="telefone_atualizado_sucesso">Telefone atualizado com sucesso</string>
    <string name="endereco_atualizado_sucesso">Endereço atualizado com sucesso</string>
    <string name="sobrenome_perfil">Sobrenome:</string>
    <string name="telefone1_perfil">Telefone (opção 1):</string>
    <string name="telefone2_perfil">Telefone (opção 2):</string>
    <string name="endereço_perfil">Endereço:</string>
    <string name="meu_endereco">Meu endereço</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmarDados">Os dados inseridos estão corretos?</string>
    <string name="total_de_desconto_nesta_loja">Total de desconto na empresa</string>
    <string name="empresas">Empresas</string>
    <string name="porcentagem_de_desconto">Porcentagem CashBack:</string>
    <string name="data_venda">Data:</string>
    <string name="filtro_de_pesquisa">Filtro de pesquisa:</string>
    <string name="tv_recycle_rua">Rua:</string>
    <string name="tv_recycle_bairro">Bairro:</string>
    <string name="tv_recycle_numero">Número:</string>
    <string name="tv_recycle_cep">CEP:</string>
    <string name="tv_recycle_complemento">Complemento:</string>
    <string name="tv_recycle_cidade">Cidade:</string>
    <string name="descri_o">Descrição:</string>
    <string name="tv_cidade">Cidade:</string>
    <string name="tv_estado">Estado</string>
    <string name="selecione_uma_cidade">Selecione uma cidade para pesquisar</string>
    <string-array name="estados">
        <item>Selecione</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distito Federal</item>
        <item>Espirito Santos</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string-array name="filtro_pesquisa">
        <item>Cidade</item>
        <item>Razão Social</item>
        <item>Nome Fantasia</item>
        <item>Porcetagem de desconto</item>
    </string-array>
</resources>