<?xml version="1.0" encoding="UTF-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group>

        <item
            android:id="@+id/dn_perfil"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/dn_perfil" />

        <item
            android:id="@+id/dn_duvidas"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/dn_duvidas" />

        <item
            android:id="@+id/dn_comentarios"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/dn_comentarios" />

    </group>


    <group android:id="@+id/group_sair"
        >

        <item
            android:id="@+id/dn_sair"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/dn_sair" />

    </group>

</menu>