<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    tools:context=".login.TelaCadastroDadosPessoais">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_cadastrar_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tv_cadastrar_nome"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cadastrar_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/meu_edit_text"
            android:hint="@string/et_cadastrar_nome"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_cadastrar_sobrenome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tv_cadastrar_sobrenome"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_cadastrar_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/meu_edit_text"
            android:hint="@string/et_cadastrar_sobrenome_hint"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_cadastrar_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tv_cadastrar_cpf"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_cadastrar_cpf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/meu_edit_text"
                android:maxLength="14"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_cadastrar_validacaoCPF"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/pessoa" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cadastrar_dataNasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tv_cadastrar_dataNasc"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_cadastrar_dataNasc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:background="@drawable/meu_edit_text"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_cadastrar_validacaoData"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/calendario" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_cadastrar_proximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorSecondaryLight"
            android:text="@string/bt_login_proximo" />

    </LinearLayout>

</ScrollView>