<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RedefinirSenhaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_seu_email_para_redefinir_a_senha"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_recuperar_senha_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/meu_edit_text"
        android:hint="@string/et_login_login_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/bt_redefinir_redefinir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorSecondaryLight"
        android:text="@string/redefinir" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/voc_receber_no_email_indicado_um_link_para_redefini_o_da_senha"
        android:textSize="5pt"/>


</androidx.appcompat.widget.LinearLayoutCompat>